--- a/curriculo.html
+++ b/curriculo.html
@@ -12,7 +12,7 @@
 
     <meta name="author" content="Vinicius">
     <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="curriculo.css">
+    <link rel="stylesheet" href="css/curriculo.css">
     <title>Meu curriculo</title>
 </head>
 <body>
